# blog-julie

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blogpost_created_date_blogpost_is_published_and_more.py  0003_photo_blogpost_main_photo.py  0004_photo_tags_photo_title_alter_blogpost_tags_and_more.py
blog/static/blog/css/: style.css
blog/templates/blog/: create.html  detail.html  list.html
config/: settings.py  urls.py
templates/: base.html
users/: admin.py  managers.py  models.py
users/migrations/: 0001_initial.py
